# mobile_robot

./: .dockerignore  .gitattributes  .gitignore  README.md  license.md  readme.md  setup.py
ddrive/: odometry.py  simulator.py  test_odometry.py
demos/: a_star_demo.py  ddrive.py
demos/python-packges/path_planning/: a_star.py  planner.py
diff_sim/: diff_simulation.py  setup.py
differential_drive_simulator/: ddrive.py  odometry.py  setup.py  simulator.py  test_odometry.py
docker/: gazebo.dockerfile
docker/dockerfiles/: gzserver.dockerfile  ning-sim-webserver.dockerfile  ning-sim.dockerfile  ros_runner.dockerfile
docker/scripts/: common.bash
path_planning/: a_star.py  pqueue.py
path_planning/a_star/: a_star.py  a_star_demo.py  maps.py  pqueue.py  readme.md  test_a_star.py  test_planner.py
path_planning/test_astar/: test_a_star.py  test_planner.py
python/: odometry.py  simulator.py
report/images/: robot.pdf_tex
reports/: nvidia2-install.md
reports/demos/: a_star_demo.py  diff_simulation.py
reports/differential-drive/: convert_svg.sh  report.tex
reports/docker-and-gazebo/: docker-and-gazebo.md  gazebo-and-ros.md
ros_ws/: .dockerignore  build-gazebo.dockerfile  build-images.bash  build-robot.dockerfile  build.bash  docker-compose.yaml  gazebo.dockerfile  readme.md  ros.dockerfile  run-robot.dockerfile  run.bash
ros_ws/docker/: gazebo.dockerfile  motor_controller_hw.py  ros-arch.dockerfile
ros_ws/scripts/: install-nvidia.bash  mobile-robot.bash
ros_ws/src/mobile_robot_gazebo/plugins/hello-world/: CMakeLists.txt
(+88 files in other folders)
